[metadata]
name = symbolic-automata-monitors
author = Anand Balakrishnan
version = 0.1.0
description = Symbolic Automata monitors for quantitative reasoning of signals
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
license_files = LICENSE

classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Intended Audience :: Science/Research

[options]
zip_safe = True
packages = find:

python_requires = ~=3.9
install_requires =
  numpy ~= 1.21
  scipy ~= 1.7
  z3-solver ~= 4.8
  networkx ~= 2.6

[options.extras_require]

autgen =
    rtamt @ https://github.com/nickovic/rtamt/tarball/a16db77b61028f774d81457ff22e666229a5432c
